Add tests for week3 and some fix test in week2

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Week1\Week1.csproj" />
     <ProjectReference Include="..\Week2\Week2.csproj" />
+    <ProjectReference Include="..\Week3\Week3.csproj" />
   </ItemGroup>
 
   <ItemGroup>
